--- a/public/main.css
+++ b/public/main.css
@@ -15,9 +15,11 @@ canvas {
     position:fixed;
     border: 1px solid black;
     left: 65%;
-    top: 0;
+    top: 50px;
     bottom: 0;
     width: 400px;
+    height: 500px;
+    overflow-y: auto;
 }
 form { 
     position: absolute;
@@ -26,13 +28,15 @@ form {
     /* left: 65%;  */
     bottom: 0; 
     width: 100%; 
+    overflow-y: auto;
 }
 form input { 
     /* background-color: #F84CF8; */
     border: 1px solid black; 
     padding: 10px; 
     width: 78%; 
-    margin-right: .5%; 
+    margin-right: .5%;
+    overflow-y: auto; 
 }
 
 form button { 
@@ -50,10 +54,13 @@ form button {
     list-style-type: none; 
     /* margin-left: 65%;  */
     padding: 0; 
+    height: 400px;
+    overflow: auto;
 }
 
 #messages li { 
     padding: 5px 10px; 
+    overflow-y: auto;
 }
 
 /* #messages li:nth-child(odd) { 
