--- a/public/main.css
+++ b/public/main.css
@@ -14,7 +14,7 @@ canvas {
 #chatbox {
     position:fixed;
     border: 1px solid black;
-    left: 65%;
+    left: 800px;
     top: 50px;
     bottom: 0;
     height: 500px;
