--- a/game/public/main.css
+++ b/game/public/main.css
@@ -2,7 +2,7 @@ body, html {
     margin: 0px;
     position: relative;
     font: 13px Helvetica, Arial; 
-    /* background-color: #39A4E6; */
+    background-color: rgb(0, 0, 0);
 }
 
 canvas {
